# holoviz-viz-mcp

./: .gitignore  .mcp.json  DEMO_PROMPTS.md  README.md  pyproject.toml  setup.sh
demos/: quick_demo.py  showcase_ml_evaluator.py  showcase_stock_analysis.py
src/holoviz_viz_mcp/: __init__.py  __main__.py  rendering.py  server.py  state.py
src/holoviz_viz_mcp/apps/: crossfilter.html  dashboard.html  eda.html  quality.html  statistics.html  stream.html  timeseries.html  viewer.html  viz.html
src/holoviz_viz_mcp/tools/: annotations.py  auto_eda.py  bigdata.py  crossfilter.py  dashboard.py  data.py  data_quality.py  export.py  interact.py  nlq.py  statistics.py  streaming.py  timeseries.py  transform.py  utils.py  viz.py
tests/: test_annotations.py  test_auto_eda.py  test_bigdata.py  test_crossfilter.py  test_data_quality.py  test_export.py  test_interact.py  test_nlq.py  test_server.py  test_state.py  test_statistics.py  test_streaming.py  test_timeseries.py  test_tools.py  test_transform.py  test_utils.py
